feat: add conv filters

--- a/course.ipynb
+++ b/course.ipynb
@@ -151,9 +151,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conv_layer = torch.nn.Conv2d(in_channels=3, out_channels=1, kernel_size=3, stride=1, padding=1)\n",
+    "filter = torch.tensor([[[[-1, -1, -1],\n",
+    "                                 [-1,  8, -1],\n",
+    "                                 [-1, -1, -1]]]], dtype=torch.float32)  # Edge detection filter\n",
+    "conv_layer = torch.nn.Conv2d(in_channels=3, out_channels=1, kernel_size=3, padding=1, bias=False)\n",
+    "relu_layer = torch.nn.ReLU()\n",
+    "conv_layer.weight = torch.nn.Parameter(filter.repeat(1, 3, 1, 1))  # Repeat filter for 3 input channels\n",
     "image_tensor = torch.tensor(image).permute(2, 0, 1).unsqueeze(0).float()  # Add batch dimension and convert to float\n",
     "filtered_image = conv_layer(image_tensor)\n",
+    "filtered_image = relu_layer(filtered_image)\n",
+    "\n",
+    "plt.imshow(filtered_image.squeeze(0).permute(1, 2, 0).detach().numpy(), cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65d6bc8a",
+   "metadata": {},
+   "source": [
+    "We can see how another filter might affect the image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c003662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter = torch.tensor([[[[1, 0, -1],\n",
+    "                                 [1, 0, -1],\n",
+    "                                 [1, 0, -1]]]], dtype=torch.float32)  # Another filter\n",
+    "conv_layer.weight = torch.nn.Parameter(filter.repeat(1, 3, 1, 1))  # Repeat filter for 3 input channels\n",
+    "filtered_image = conv_layer(image_tensor)\n",
+    "filtered_image = relu_layer(filtered_image)\n",
     "plt.imshow(filtered_image.squeeze(0).permute(1, 2, 0).detach().numpy(), cmap='gray')"
    ]
   },
