feat: add data augmentations

--- a/course.ipynb
+++ b/course.ipynb
@@ -77,10 +77,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a487adc",
+   "id": "3c023fe9",
    "metadata": {},
    "source": [
-    "See what pooling does"
+    "# Max Pooling\n",
+    "We can also apply max pooling to the image. Max pooling is a downsampling technique that reduces the spatial dimensions of the image, while retaining the most important features. Here, we use a kernel size of 2 and a stride of 4."
    ]
   },
   {
@@ -157,11 +158,46 @@
     "conv_layer = torch.nn.Conv2d(in_channels=3, out_channels=1, kernel_size=3, padding=1, bias=False)\n",
     "relu_layer = torch.nn.ReLU()\n",
     "conv_layer.weight = torch.nn.Parameter(filter.repeat(1, 3, 1, 1))  # Repeat filter for 3 input channels\n",
-    "image_tensor = torch.tensor(image).permute(2, 0, 1).unsqueeze(0).float()  # Add batch dimension and convert to float\n",
+    "image_tensor = torch.tensor(image).permute(2, 0, 1).unsqueeze(0).float()  # Add batch dimension and convert to float"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d4b451e",
+   "metadata": {},
+   "source": [
+    "Without Relu:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eab1996",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_image = conv_layer(image_tensor)\n",
+    "plt.imshow(filtered_image.squeeze(0).permute(1, 2, 0).detach().numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416bd513",
+   "metadata": {},
+   "source": [
+    "With Relu:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a526f7f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "filtered_image = conv_layer(image_tensor)\n",
     "filtered_image = relu_layer(filtered_image)\n",
-    "\n",
-    "plt.imshow(filtered_image.squeeze(0).permute(1, 2, 0).detach().numpy(), cmap='gray')"
+    "plt.imshow(filtered_image.squeeze(0).permute(1, 2, 0).detach().numpy())"
    ]
   },
   {
@@ -169,7 +205,7 @@
    "id": "65d6bc8a",
    "metadata": {},
    "source": [
-    "We can see how another filter might affect the image."
+    "We can see how another filter might affect the image. Try to change the filter values and see how it affects the image."
    ]
   },
   {
@@ -179,14 +215,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter = torch.tensor([[[[1, 0, -1],\n",
-    "                                 [1, 0, -1],\n",
-    "                                 [1, 0, -1]]]], dtype=torch.float32)  # Another filter\n",
+    "filter = torch.tensor([[[[0, 1, 0],\n",
+    "                                 [-1, 1, 1],\n",
+    "                                 [0, 0, 1]]]], dtype=torch.float32)  # Another filter\n",
     "conv_layer.weight = torch.nn.Parameter(filter.repeat(1, 3, 1, 1))  # Repeat filter for 3 input channels\n",
     "filtered_image = conv_layer(image_tensor)\n",
     "filtered_image = relu_layer(filtered_image)\n",
-    "plt.imshow(filtered_image.squeeze(0).permute(1, 2, 0).detach().numpy(), cmap='gray')"
+    "plt.imshow(filtered_image.squeeze(0).permute(1, 2, 0).detach().numpy())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27e2be80",
+   "metadata": {},
+   "source": [
+    "# Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "becfd12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision.transforms import RandomVerticalFlip, RandomRotation, ColorJitter, GaussianBlur, RandomResizedCrop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a94fa79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((128, 128)),\n",
+    "    RandomVerticalFlip(p=0.5),\n",
+    "    RandomRotation(degrees=30),\n",
+    "    RandomResizedCrop(size=128, scale=(0.8, 1.0), ratio=(0.75, 1.33)),\n",
+    "    ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.1),\n",
+    "    GaussianBlur(kernel_size=5, sigma=(0.1, 2.0)),\n",
+    "    transforms.ToTensor(),\n",
+    "\n",
+    "])\n",
+    "dataset = datasets.FashionMNIST(root='data', train=True, download=True, transform=transform)\n",
+    "image, label = dataset[0]\n",
+    "plt.imshow(image.permute(1, 2, 0).numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0da0376f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -225,9 +309,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c140942",
+   "metadata": {},
+   "source": [
+    "This model is not trained, so the output will be random. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "860b4eb4",
+   "metadata": {},
+   "source": [
+    "# Training a model\n",
+    "Below is an example of how to train a model on the Fashion MNIST dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e584404",
+   "id": "e6019c1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data = datasets.FashionMNIST(root='data/FashionMNIST', train=True, download=True, transform=transform)\n",
+    "test_data = datasets.FashionMNIST(root='data/FashionMNIST', train=False, download=True, transform=transform)\n",
+    "\n",
+    "train_loader = DataLoader(training_data, batch_size=32, shuffle=True)\n",
+    "test_loader = DataLoader(test_data, batch_size=32, shuffle=False)\n",
+    "\n",
+    "loss_function = torch.nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "801e9183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 1\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for images, labels in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = loss_function(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    avg_loss = total_loss / len(train_loader)\n",
+    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42b171bb",
+   "metadata": {},
+   "source": [
+    "We can then evaluate the model on the test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5425842e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "correct = 0\n",
+    "for images, labels in test_loader:\n",
+    "        outputs = model(images)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "accuracy = 100 * correct / total\n",
+    "print(f'Accuracy of the model on the test images: {accuracy:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5812982f",
+   "metadata": {},
+   "source": [
+    "# Design your own model\n",
+    "Now you can try to create your own model and train it on the Fashion MNIST dataset!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c3af7ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential(\n",
+    "    # Design your own model\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "992ec2bc",
    "metadata": {},
    "outputs": [],
    "source": []
