feat: add task 3

--- a/course.ipynb
+++ b/course.ipynb
@@ -205,6 +205,7 @@
    "id": "65d6bc8a",
    "metadata": {},
    "source": [
+    "# Task 1 - Experiment with Filters\n",
     "We can see how another filter might affect the image. Try to change the filter values and see how it affects the image."
    ]
   },
@@ -229,7 +230,7 @@
    "id": "27e2be80",
    "metadata": {},
    "source": [
-    "# Data Augmentation"
+    "# Task 2 - Data Augmentation"
    ]
   },
   {
@@ -249,6 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Try to change some of the parameters below and see how the image changes. Also try to add/remove transforms.\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((128, 128)),\n",
     "    RandomVerticalFlip(p=0.5),\n",
@@ -263,14 +265,6 @@
     "image, label = dataset[0]\n",
     "plt.imshow(image.permute(1, 2, 0).numpy())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0da0376f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -396,7 +390,7 @@
    "id": "5812982f",
    "metadata": {},
    "source": [
-    "# Design your own model\n",
+    "# Task 3 - Design your own model\n",
     "Now you can try to create your own model and train it on the Fashion MNIST dataset!"
    ]
   },
@@ -409,7 +403,18 @@
    "source": [
     "model = Sequential(\n",
     "    # Design your own model\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((128, 128)),\n",
+    "    # Add your data augmentations here\n",
+    "    transforms.ToTensor(),\n",
+    "])\n",
+    "\n",
+    "# You may change these values\n",
+    "batch_size = 32\n",
+    "learning_rate = 0.001\n",
+    "epochs = 5\n"
    ]
   },
   {
@@ -418,7 +423,20 @@
    "id": "992ec2bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for images, labels in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = loss_function(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    avg_loss = total_loss / len(train_loader)\n",
+    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}\")"
+   ]
   }
  ],
  "metadata": {
