feat: add website link and header

--- a/course.ipynb
+++ b/course.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3950bea4",
+   "metadata": {},
+   "source": [
+    "# Cogito Computer Vision Course\n",
+    "\n",
+    "Welcome to the Cogito Computer Vision Course!\n",
+    "In this course you will learn about the fundamentals of computer vision, including image processing, feature extraction, and object classification.\n",
+    "An additional resource for learning about convolutional neural networks (CNNs) can be found in [this link](https://poloclub.github.io/cnn-explainer/)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3751dd8b",
