feat: enhance Task 1 description with examples of filters

--- a/course.ipynb
+++ b/course.ipynb
@@ -218,7 +218,10 @@
    "metadata": {},
    "source": [
     "# Task 1 - Experiment with Filters\n",
-    "We can see how another filter might affect the image. Try to change the filter values and see how it affects the image."
+    "We can see how another filter might affect the image. Try to change the filter values and see how it affects the image.\n",
+    "\n",
+    "Here are some examples of filters:\n",
+    "![image.png](attachment:image.png)"
    ]
   },
   {
