fix: update image link for filter examples in Task 1

--- a/course.ipynb
+++ b/course.ipynb
@@ -221,7 +221,7 @@
     "We can see how another filter might affect the image. Try to change the filter values and see how it affects the image.\n",
     "\n",
     "Here are some examples of filters:\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](https://miro.medium.com/v2/resize:fit:1400/1*UaO9cemImbhwMVQOoUTPLQ.png)\n"
    ]
   },
   {
