--- a/course.ipynb
+++ b/course.ipynb
@@ -165,8 +165,8 @@
    "outputs": [],
    "source": [
     "filter = torch.tensor([[[[-1, -1, -1],\n",
-    "                                 [-1,  8, -1],\n",
-    "                                 [-1, -1, -1]]]], dtype=torch.float32)  # Edge detection filter\n",
+    "                         [-1,  8, -1],\n",
+    "                         [-1, -1, -1]]]], dtype=torch.float32)  # Edge detection filter\n",
     "conv_layer = torch.nn.Conv2d(in_channels=3, out_channels=1, kernel_size=3, padding=1, bias=False)\n",
     "relu_layer = torch.nn.ReLU()\n",
     "conv_layer.weight = torch.nn.Parameter(filter.repeat(1, 3, 1, 1))  # Repeat filter for 3 input channels\n",
@@ -231,9 +231,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter = torch.tensor([[[[0, 1, 0],\n",
-    "                                 [-1, 1, 1],\n",
-    "                                 [0, 0, 1]]]], dtype=torch.float32)  # Another filter\n",
+    "filter = torch.tensor([[[[ 0, 1, 0],\n",
+    "                         [-1, 1, 1],\n",
+    "                         [ 0, 0, 1]]]], dtype=torch.float32)  # Another filter\n",
     "conv_layer.weight = torch.nn.Parameter(filter.repeat(1, 3, 1, 1))  # Repeat filter for 3 input channels\n",
     "filtered_image = conv_layer(image_tensor)\n",
     "filtered_image = relu_layer(filtered_image)\n",
@@ -245,7 +245,10 @@
    "id": "27e2be80",
    "metadata": {},
    "source": [
-    "# Task 2 - Data Augmentation"
+    "# Task 2 - Explore Data Augmentation\n",
+    "\n",
+    "Uncomment a transformation and run the cell to see what it does. You can experiment with the parameter values too, if you like. (The factor parameters should be greater than 0 and, generally, less than 1.) Run the cell again if you'd like to get a new random image.\n",
+    "\n"
    ]
   },
   {
