feat: add instance segmentation

--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -50,11 +50,9 @@
     "\n",
     "            # confidence\n",
     "            confidence = math.ceil((box.conf[0]*100))/100\n",
-    "            print(\"Confidence --->\",confidence)\n",
     "\n",
     "            # class name\n",
     "            cls = int(box.cls[0])\n",
-    "            print(\"Class name -->\", classNames[cls])\n",
     "\n",
     "            # object details\n",
     "            org = [x1, y1]\n",
@@ -108,11 +106,14 @@
     "    # coordinates\n",
     "    for r in results:\n",
     "        masks = r.masks\n",
+    "        boxes = r.boxes\n",
+    "        if masks is None:  # Skip if no masks detected\n",
+    "            continue\n",
     "\n",
-    "        for mask in masks:\n",
-    "            print(mask.xy)\n",
+    "        for mask, box in zip(masks, boxes):\n",
     "            mask = mask.xy[0].astype(int)\n",
-    "        \n",
+    "\n",
+    "            cls = int(box.cls[0])\n",
     "            # Draw filled mask overlay\n",
     "            overlay = img.copy()\n",
     "            cv2.fillPoly(overlay, [mask], color=(0, 255, 0))  # green mask\n",
