feat: make persons have distinct color

--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -115,8 +115,12 @@
     "\n",
     "            cls = int(box.cls[0])\n",
     "            # Draw filled mask overlay\n",
+    "            if cls == 0:\n",
+    "                color = (0, 255, 0)\n",
+    "            else:\n",
+    "                color = (255, 0, 0)\n",
     "            overlay = img.copy()\n",
-    "            cv2.fillPoly(overlay, [mask], color=(0, 255, 0))  # green mask\n",
+    "            cv2.fillPoly(overlay, [mask], color=color)  # green mask\n",
     "            img = cv2.addWeighted(overlay, 0.5, img, 0.5, 0)\n",
     "\n",
     "            # object details\n",
