--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f3451b3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install opencv-python-headless ultralytics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9f182dd5",
    "metadata": {},
    "outputs": [],
