feat: add pose estimation

--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -149,6 +149,60 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c82b82c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(0)\n",
+    "cap.set(3, 640)\n",
+    "cap.set(4, 480)\n",
+    "\n",
+    "# model\n",
+    "model = YOLO(\"yolov8n-pose.pt\")\n",
+    "\n",
+    "while True:\n",
+    "    success, img = cap.read()\n",
+    "    results = model(img, stream=True)\n",
+    "\n",
+    "    for r in results:\n",
+    "        if r.keypoints is None:  # skip if no keypoints detected\n",
+    "            continue\n",
+    "    \n",
+    "        kps = r.keypoints.xy.cpu().numpy()  # shape: (num_objects, num_keypoints, 2)\n",
+    "        \n",
+    "        for obj_kps in kps:\n",
+    "            for x, y in obj_kps:\n",
+    "                if x > 0 and y > 0:  # valid point\n",
+    "                    cv2.circle(img, (int(x), int(y)), 4, (0, 255, 0), -1)\n",
+    "        \n",
+    "        skeleton = [\n",
+    "            (5, 7), (7, 9),    # left arm\n",
+    "            (6, 8), (8, 10),   # right arm\n",
+    "            (11, 13), (13, 15),# left leg\n",
+    "            (12, 14), (14, 16),# right leg\n",
+    "            (5, 6), (11, 12),  # shoulders and hips\n",
+    "            (5, 11), (6, 12)   # torso\n",
+    "        ]\n",
+    "\n",
+    "        for obj_kps in kps:\n",
+    "            for (i, j) in skeleton:\n",
+    "                x1, y1 = obj_kps[i]\n",
+    "                x2, y2 = obj_kps[j]\n",
+    "                if x1 > 0 and y1 > 0 and x2 > 0 and y2 > 0:\n",
+    "                    cv2.line(img, (int(x1), int(y1)), (int(x2), int(y2)), (255, 0, 0), 2)\n",
+    "\n",
+    "        # Show image with pose estimation\n",
+    "    cv2.imshow(\"YOLO Pose Estimation\", img)\n",
+    "    if cv2.waitKey(1) == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
