feat: enhance vision tasks notebook with detailed markdown explanations and training instructions

--- a/vision_tasks.ipynb
+++ b/vision_tasks.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "340bf2f8",
+   "metadata": {},
+   "source": [
+    "# Task 0: Try out some of the pretrained models\n",
+    "This notebook will guide you through some of the most common computer vision tasks, including object detection, image segmentation, and pose estimation. We will use the [Ultralytics YOLO](https://docs.ultralytics.com/) library, which provides a simple and efficient way to perform these tasks using pretrained models.\n",
+    "\n",
+    "YOLO (You Only Look Once) is a family of real-time object detection models that are known for their speed and accuracy. The Ultralytics YOLO library provides a simple interface to use these models for various computer vision tasks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f3451b3b",
@@ -8,6 +19,17 @@
    "outputs": [],
    "source": [
     "%pip install opencv-python-headless ultralytics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba86d29a",
+   "metadata": {},
+   "source": [
+    "## Object Bounding Box Detection\n",
+    "Oriented object detection goes a step further than standard object detection by introducing an extra angle to locate objects more accurately in an image.\n",
+    "\n",
+    "The output of an oriented object detector is a set of rotated bounding boxes that precisely enclose the objects in the image, along with class labels and confidence scores for each box. Oriented bounding boxes are particularly useful when objects appear at various angles, such as in aerial imagery, where traditional axis-aligned bounding boxes may include unnecessary background."
    ]
   },
   {
@@ -79,6 +101,17 @@
     "\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78c1adde",
+   "metadata": {},
+   "source": [
+    "## Image Segmentation\n",
+    "Instance segmentation goes a step further than object detection and involves identifying individual objects in an image and segmenting them from the rest of the image.\n",
+    "\n",
+    "The output of an instance segmentation model is a set of masks or contours that outline each object in the image, along with class labels and confidence scores for each object. Instance segmentation is useful when you need to know not only where objects are in an image, but also what their exact shape is."
    ]
   },
   {
@@ -155,6 +188,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85d90bf8",
+   "metadata": {},
+   "source": [
+    "## Pose Estimation\n",
+    "Pose estimation is a task that involves identifying the location of specific points in an image, usually referred to as keypoints. The keypoints can represent various parts of the object such as joints, landmarks, or other distinctive features. The locations of the keypoints are usually represented as a set of 2D [x, y] or 3D [x, y, visible] coordinates.\n",
+    "\n",
+    "The output of a pose estimation model is a set of points that represent the keypoints on an object in the image, usually along with the confidence scores for each point. Pose estimation is a good choice when you need to identify specific parts of an object in a scene, and their location in relation to each other."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3c82b82c",
@@ -163,7 +207,6 @@
    "source": [
     "from ultralytics import YOLO\n",
     "import cv2\n",
-    "import math \n",
     "\n",
     "cap = cv2.VideoCapture(0)\n",
     "cap.set(3, 640)\n",
@@ -211,11 +254,54 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bedf39cb",
+   "metadata": {},
+   "source": [
+    "## Extras: How to train your own YOLO model\n",
+    "If you want to train your own YOLO model, you can follow these general steps:\n",
+    "\n",
+    "```python\n",
+    "from ultralytics import YOLO\n",
+    "\n",
+    "# Load a model\n",
+    "model = YOLO(\"yolo11n.pt\")  # load a pretrained model (recommended for training)\n",
+    "\n",
+    "# Train the model with MPS\n",
+    "results = model.train(data=\"coco8.yaml\", epochs=100, imgsz=640)\n",
+    "\n",
+    "# Validate the model\n",
+    "metrics = model.val()  # no arguments needed, dataset and settings remembered\n",
+    "metrics.box.map  # map50-95\n",
+    "metrics.box.map50  # map50\n",
+    "metrics.box.map75  # map75\n",
+    "metrics.box.maps  # a list contains map50-95 of each category\n",
+    "\n",
+    "# Run batched inference on a list of images\n",
+    "results = model([\"image1.jpg\", \"image2.jpg\"])  # return a list of Results objects\n",
+    "\n",
+    "# Process results list\n",
+    "for result in results:\n",
+    "    boxes = result.boxes  # Boxes object for bounding box outputs\n",
+    "    masks = result.masks  # Masks object for segmentation masks outputs\n",
+    "    keypoints = result.keypoints  # Keypoints object for pose outputs\n",
+    "    probs = result.probs  # Probs object for classification outputs\n",
+    "    obb = result.obb  # Oriented boxes object for OBB outputs\n",
+    "    result.show()  # display to screen\n",
+    "    result.save(filename=\"result.jpg\")  # save to disk\n",
+    "\n",
+    "\n",
+    "# Export the model to another format\n",
+    "model.export(format=\"onnx\")\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kurs",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
