--- a/course.ipynb
+++ b/course.ipynb
@@ -144,9 +144,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = \"data/cat.png\"\n",
-    "image = plt.imread(image_path)\n",
-    "plt.imshow(image)"
+    "import requests\n",
+    "from io import BytesIO\n",
+    "\n",
+    "url = \"https://cdn.britannica.com/70/234870-050-D4D024BB/Orange-colored-cat-yawns-displaying-teeth.jpg\"\n",
+    "\n",
+    "# Download the image\n",
+    "response = requests.get(url)\n",
+    "image = plt.imread(BytesIO(response.content), format=\"jpg\")\n",
+    "\n",
+    "plt.imshow(image)\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -453,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kurs",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -467,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
