--- a/course.ipynb
+++ b/course.ipynb
@@ -14,20 +14,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3751dd8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (2.6.0)\n",
+      "Requirement already satisfied: torchvision in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (0.21.0)\n",
+      "Requirement already satisfied: matplotlib in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (3.9.2)\n",
+      "Requirement already satisfied: filelock in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torch) (3.16.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: networkx in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torch) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torch) (3.1.4)\n",
+      "Requirement already satisfied: fsspec in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torch) (2024.10.0)\n",
+      "Requirement already satisfied: setuptools in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torch) (75.3.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torch) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from sympy==1.13.1->torch) (1.3.0)\n",
+      "Requirement already satisfied: numpy in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torchvision) (2.0.2)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from torchvision) (11.0.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from matplotlib) (1.3.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from matplotlib) (4.54.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from matplotlib) (1.4.7)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from matplotlib) (24.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from matplotlib) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/brage/.pyenv/versions/3.12.7/lib/python3.12/site-packages (from jinja2->torch) (3.0.2)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! pip install torch torchvision matplotlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "31afdb5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torchvision'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datasets, transforms\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataLoader\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torchvision'"
+     ]
+    }
+   ],
    "source": [
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
@@ -139,10 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5d697105",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BytesIO\n\u001b[1;32m      4\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://cdn.britannica.com/70/234870-050-D4D024BB/Orange-colored-cat-yawns-displaying-teeth.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from io import BytesIO\n",
@@ -311,6 +367,9 @@
     "from torch.nn import Conv2d, MaxPool2d, Flatten, Linear, Sequential\n",
     "import torch\n",
     "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Using device: \", device) # The device should be CUDA\n",
+    "\n",
     "class_names = dataset.classes\n",
     "# Create a model\n",
     "model = Sequential(\n",
@@ -319,11 +378,11 @@
     "    Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1),\n",
     "    MaxPool2d(kernel_size=2, stride=2),\n",
     "    Flatten(),\n",
-    "    Linear(in_features=32 * 32 * 32, out_features=128),\n",
+    "    Linear(in_features=784, out_features=128),\n",
     "    Linear(in_features=128, out_features=10)\n",
-    ")\n",
+    ").to(device)\n",
     "# Test the model with the first image\n",
-    "img = dataset[0][0].unsqueeze(0)  # Add batch dimension\n",
+    "img = dataset[0][0].unsqueeze(0).to(device)  # Add batch dimension\n",
     "output = model(img)\n",
     "predicted_class = torch.argmax(output, dim=1).item()\n",
     "print(f\"The model predicts this image as a {class_names[predicted_class]}\")"
@@ -356,8 +415,8 @@
     "training_data = datasets.FashionMNIST(root='data/FashionMNIST', train=True, download=True, transform=transform)\n",
     "test_data = datasets.FashionMNIST(root='data/FashionMNIST', train=False, download=True, transform=transform)\n",
     "\n",
-    "train_loader = DataLoader(training_data, batch_size=32, shuffle=True)\n",
-    "test_loader = DataLoader(test_data, batch_size=32, shuffle=False)\n",
+    "train_loader = DataLoader(training_data, batch_size=128, shuffle=True)\n",
+    "test_loader = DataLoader(test_data, batch_size=128, shuffle=False)\n",
     "\n",
     "loss_function = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n"
@@ -374,7 +433,10 @@
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    total_loss = 0\n",
-    "    for images, labels in train_loader:\n",
+    "    for i, (images, labels) in enumerate(train_loader):\n",
+    "        if i % 10 == 0:\n",
+    "            print(f\"Training on batch number: {i}\")\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(images)\n",
     "        loss = loss_function(outputs, labels)\n",
@@ -403,11 +465,14 @@
    "source": [
     "total = 0\n",
     "correct = 0\n",
+    "model.eval()\n",
     "for images, labels in test_loader:\n",
-    "        outputs = model(images)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
+    "        with torch.no_grad():\n",
+    "                outputs = model(images)\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total += labels.size(0)\n",
+    "                correct += (predicted == labels).sum().item()\n",
     "accuracy = 100 * correct / total\n",
     "print(f'Accuracy of the model on the test images: {accuracy:.2f}%')"
    ]
@@ -430,7 +495,7 @@
    "source": [
     "model = Sequential(\n",
     "    # Design your own model\n",
-    ")\n",
+    ").to(device)\n",
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((128, 128)),\n",
@@ -455,6 +520,7 @@
     "    model.train()\n",
     "    total_loss = 0\n",
     "    for images, labels in train_loader:\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(images)\n",
     "        loss = loss_function(outputs, labels)\n",
