docs: add link to colab

--- a/course.ipynb
+++ b/course.ipynb
@@ -8,6 +8,9 @@
     "# Cogito Computer Vision Course\n",
     "\n",
     "Welcome to the Cogito Computer Vision Course!\n",
+    "\n",
+    "One can either run the code here locally, or in a Google Colab notebook: https://colab.research.google.com/github/CogitoNTNU/course-computer-vision/blob/main/course.ipynb \n",
+    "\n",
     "In this course you will learn about the fundamentals of computer vision, including image processing, feature extraction, and object classification.\n",
     "An additional resource for learning about convolutional neural networks (CNNs) can be found in [this link](https://poloclub.github.io/cnn-explainer/)."
    ]
