feat: add final testing of model

--- a/course.ipynb
+++ b/course.ipynb
@@ -457,6 +457,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81909423",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "992ec2bc",
@@ -476,6 +484,35 @@
     "        total_loss += loss.item()\n",
     "    avg_loss = total_loss / len(train_loader)\n",
     "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cb9a5ad",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c740f492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "correct = 0\n",
+    "model.eval()\n",
+    "for images, labels in test_loader:\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
+    "        with torch.no_grad():\n",
+    "                outputs = model(images)\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total += labels.size(0)\n",
+    "                correct += (predicted == labels).sum().item()\n",
+    "accuracy = 100 * correct / total\n",
+    "print(f'Accuracy of the model on the test images: {accuracy:.2f}%')"
    ]
   }
  ],
