feat: small change

--- a/course.ipynb
+++ b/course.ipynb
@@ -429,23 +429,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "num_epochs = 1\n",
+    "batch_losses = []  # List to store loss for each batch\n",
+    "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    total_loss = 0\n",
     "    for i, (images, labels) in enumerate(train_loader):\n",
     "        if i % 10 == 0:\n",
     "            print(f\"Training on batch number: {i}\")\n",
+    "        \n",
     "        images, labels = images.to(device), labels.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(images)\n",
     "        loss = loss_function(outputs, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "\n",
+    "        # Store batch loss\n",
+    "        batch_losses.append(loss.item())\n",
     "        total_loss += loss.item()\n",
+    "\n",
     "    avg_loss = total_loss / len(train_loader)\n",
     "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}\")\n",
-    "\n"
+    "\n",
+    "# Plot the loss over batches\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(batch_losses, label='Batch Loss')\n",
+    "plt.xlabel('Batch Number')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.title('Training Loss per Batch')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   },
   {
