--- a/course.ipynb
+++ b/course.ipynb
@@ -376,8 +376,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "num_epochs = 1\n",
     "batch_losses = []  # List to store loss for each batch\n",
     "\n",
@@ -409,7 +407,7 @@
     "plt.ylabel('Loss')\n",
     "plt.title('Training Loss per Batch')\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -462,7 +460,7 @@
     ").to(device)\n",
     "\n",
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((128, 128)),\n",
+    "    transforms.Resize((28, 28)),\n",
     "    # Add your data augmentations here\n",
     "    transforms.ToTensor(),\n",
     "])\n",
@@ -518,18 +516,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total = 0\n",
-    "correct = 0\n",
-    "model.eval()\n",
-    "for images, labels in test_loader:\n",
+    "num_epochs = 1\n",
+    "batch_losses = []  # List to store loss for each batch\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for i, (images, labels) in enumerate(train_loader):\n",
+    "        if i % 10 == 0:\n",
+    "            print(f\"Training on batch number: {i}\")\n",
+    "        \n",
     "        images, labels = images.to(device), labels.to(device)\n",
-    "        with torch.no_grad():\n",
-    "                outputs = model(images)\n",
-    "                _, predicted = torch.max(outputs.data, 1)\n",
-    "                total += labels.size(0)\n",
-    "                correct += (predicted == labels).sum().item()\n",
-    "accuracy = 100 * correct / total\n",
-    "print(f'Accuracy of the model on the test images: {accuracy:.2f}%')"
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = loss_function(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # Store batch loss\n",
+    "        batch_losses.append(loss.item())\n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "    avg_loss = total_loss / len(train_loader)\n",
+    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {avg_loss:.4f}\")\n",
+    "\n",
+    "# Plot the loss over batches\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(batch_losses, label='Batch Loss')\n",
+    "plt.xlabel('Batch Number')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.title('Training Loss per Batch')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   }
  ],
