--- a/vision_tasks.ipynb
+++ b/vision_tasks.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install opencv-python-headless ultralytics"
+    "%pip install opencv-python-headless ultralytics requests"
    ]
   },
   {
